--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.7",
+    "dotenv-webpack": "^5.1.0",
     "electron": "^11.0.1",
     "electron-reload": "^1.5.0",
     "nodemon": "^2.0.6"
@@ -22,8 +23,14 @@
     "babel-loader": "^8.2.1",
     "bootstrap": "^4.5.2",
     "css-loader": "^5.0.1",
+    "firebase": "^8.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.11.5",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
