--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "@reduxjs/toolkit": "^1.5.0",
     "babel-loader": "^8.2.1",
     "bootstrap": "^4.5.2",
     "css-loader": "^5.0.1",
